feat(account): add My Account page, routing, and sales history

--- a/EasyGames/appsettings.json
+++ b/EasyGames/appsettings.json
@@ -8,5 +8,17 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+
+  "TierRules": {
+    "SilverMinProfit": 200.0,
+    "GoldMinProfit": 1000.0,
+    "PlatinumMinProfit": 3000.0,
+    "Discounts": {
+      "Bronze": 0,
+      "Silver": 5,
+      "Gold": 10,
+      "Platinum": 15
+    }
+  }
 }
